--- a/task-8-imroz/index.html
+++ b/task-8-imroz/index.html
@@ -456,10 +456,10 @@
 
     <section class="about container-fluid">
       <div class="row">
-        <div class="about__image col-lg-5">
+        <div class="about__image col-lg-5 col-md-12 col-sm-12 mb-4">
           <img src="./images/about-3.jpg" alt="about image" />
         </div>
-        <div class="about__content col-lg-7">
+        <div class="about__content col-lg-7 col-md-12 col-sm-12">
           <p class="subtitle">Our complete project</p>
           <h3>Our Project</h3>
           <p class="description">
@@ -520,7 +520,7 @@
                   aliquam molestias, optio hic laborum esse. Deserunt architecto
                   officiis laudantium corporis voluptatem.
                 </p>
-                <br>
+                <br />
                 <p class="description">
                   Jannin ipsum dolor sit amet consectetur adipisicing elit.
                   Neque ab aliquid, atque enim, vero nobis quam beatae nesciunt
@@ -535,7 +535,7 @@
                   aliquam molestias, optio hic laborum esse. Deserunt architecto
                   officiis laudantium corporis voluptatem.
                 </p>
-                <br>
+                <br />
                 <p class="description">
                   Jannin ipsum dolor sit amet consectetur adipisicing elit.
                   Neque ab aliquid, atque enim, vero nobis quam beatae nesciunt
@@ -550,7 +550,7 @@
                   aliquam molestias, optio hic laborum esse. Deserunt architecto
                   officiis laudantium corporis voluptatem.
                 </p>
-                <br>
+                <br />
                 <p class="description">
                   Jannin ipsum dolor sit amet consectetur adipisicing elit.
                   Neque ab aliquid, atque enim, vero nobis quam beatae nesciunt
@@ -561,6 +561,139 @@
             </div>
           </div>
         </div>
+      </div>
+    </section>
+
+    <section class="testimonial container-fluid">
+      <div class="row">
+        <!-- NAV PANE -->
+        <div
+          class="testimonial__content col-lg-7 p-4 align-self-center tab-content"
+        >
+          <div class="testimonial__item tab-pane container active" id="image1">
+            <p>
+              Afifa Sampa The standard chunk of Lorem Ipsum used since the 1500s
+              is reproduced below for those interested. Sections Bonorum et
+              Malorum original.
+            </p>
+            <h6><span>Afifa Sampa </span> - COO, AMERIMAR ENTERPRISES, INC.</h6>
+          </div>
+          <div class="testimonial__item tab-pane container fade" id="image2">
+            <p>
+              John The standard chunk of Lorem Ipsum used since the 1500s is
+              reproduced below for those interested. Sections Bonorum et Malorum
+              original.
+            </p>
+            <h6><span>John Nira </span> COO, AMERIMAR ENTERPRISES, INC.</h6>
+          </div>
+          <div class="testimonial__item tab-pane container fade" id="image3">
+            <p>
+              Jone The standard chunk of Lorem Ipsum used since the 1500s is
+              reproduced below for those interested. Sections Bonorum et Malorum
+              original.
+            </p>
+            <h6><span>Jone Jane </span> - COO, AMERIMAR ENTERPRISES, INC.</h6>
+          </div>
+          <div class="testimonial__item tab-pane container fade" id="image4">
+            <p>
+              Janen The standard chunk of Lorem Ipsum used since the 1500s is
+              reproduced below for those interested. Sections Bonorum et Malorum
+              original.
+            </p>
+            <h6>
+              <span>Janen Asrafy </span> - COO, AMERIMAR ENTERPRISES, INC.
+            </h6>
+          </div>
+          <div class="testimonial__item tab-pane container fade" id="image5">
+            <p>
+              Afrin The standard chunk of Lorem Ipsum used since the 1500s is
+              reproduced below for those interested. Sections Bonorum et Malorum
+              original.
+            </p>
+            <h6>
+              <span>Fatima Asrafy </span> - COO, AMERIMAR ENTERPRISES, INC.
+            </h6>
+          </div>
+          <div class="testimonial__item tab-pane container fade" id="image6">
+            <p>
+              Irin The standard chunk of Lorem Ipsum used since the 1500s is
+              reproduced below for those interested. Sections Bonorum et Malorum
+              original.
+            </p>
+            <h6><span>Irin Asrafy </span> - COO, AMERIMAR ENTERPRISES, INC.</h6>
+          </div>
+          <div class="testimonial__item tab-pane container fade" id="image7">
+            <p>
+              Mohima The standard chunk of Lorem Ipsum used since the 1500s is
+              reproduced below for those interested. Sections Bonorum et Malorum
+              original.
+            </p>
+            <h6>
+              <span>Mohima Asrafy </span> - COO, AMERIMAR ENTERPRISES, INC.
+            </h6>
+          </div>
+          <div class="testimonial__item tab-pane container fade" id="image8">
+            <p>
+              Shipa The standard chunk of Lorem Ipsum used since the 1500s is
+              reproduced below for those interested. Sections Bonorum et Malorum
+              original.
+            </p>
+            <h6><span>Shipa </span> - COO, AMERIMAR ENTERPRISES, INC.</h6>
+          </div>
+        </div>
+        <!-- NAV PILS -->
+        <ul class="testimonial__image row col-lg-5 nav nav-tabs">
+          <li class="col-4 testimonial__profile nav-item">
+            <a class="nav-link active" data-toggle="tab" href="#image1">
+              <img src="./images/testimonial-1.jpg" alt="" />
+            </a>
+          </li>
+
+          <li class="col-4 testimonial__profile nav-item">
+            <a class="nav-link" data-toggle="tab" href="#image2">
+              <img src="./images/testimonial-2.jpg" alt="" />
+            </a>
+          </li>
+
+          <li class="col-4 testimonial__profile nav-item">
+            <a class="nav-link" data-toggle="tab" href="#image3">
+              <img src="./images/testimonial-3.jpg" alt="" />
+            </a>
+          </li>
+
+          <li class="col-4 testimonial__profile nav-item">
+            <a class="nav-link" data-toggle="tab" href="#image4">
+              <img src="./images/testimonial-4.jpg" alt="" />
+            </a>
+          </li>
+
+          <li class="col-4 testimonial__profile nav-item">
+            <a class="nav-link" data-toggle="tab" href="#image5">
+              <img src="./images/testimonial-5.jpg" alt="" />
+            </a>
+          </li>
+
+          <li class="col-4 testimonial__profile nav-item">
+            <a class="nav-link" data-toggle="tab" href="#image6">
+              <img src="./images/testimonial-6.jpg" alt="" />
+            </a>
+          </li>
+
+          <li class="col-1"></li>
+          <li class="col-1"></li>
+          <li class="col-4 testimonial__profile nav-item">
+            <a class="nav-link" data-toggle="tab" href="#image7">
+              <img src="./images/testimonial-7.jpg" alt="" />
+            </a>
+          </li>
+          <li class="col-4 testimonial__profile nav-item">
+            <a class="nav-link" data-toggle="tab" href="#image8">
+              <img src="./images/testimonial-8.jpg" alt="" />
+            </a>
+          </li>
+          <li class="col-1"></li>
+          <li class="col-1"></li>
+        </ul>
       </div>
     </section>
 
