--- a/task-8-imroz/index.html
+++ b/task-8-imroz/index.html
@@ -779,7 +779,106 @@
       </div>
     </section>
 
-    <footer class="footer"></footer>
+    <footer class="footer container-fluid">
+      <div
+        class="footer__action row d-flex justify-content-between align-items-center"
+      >
+        <h4>
+          Enough Talk, Let's Build <br />
+          Something Together
+        </h4>
+        <button class="header-btn">Read Out Now</button>
+      </div>
+      <div class="row d-flex justify-content-between align-items-start pt-4">
+        <div class="footer__intro  col-lg-5 col-md-12">
+          <div class="footer__logo">
+            <img src="./images/logo-light.png" alt="footer logo" />
+          </div>
+          <p class="footer-text">
+            Copyright © 2021 Imroz React Template. <br />
+            Built with love in Bangladesh <br />
+            All rights reserved.
+          </p>
+        </div>
+        <div class="col-lg-2">
+          <h5>Quick Link</h5>
+          <ul class="flex-lg-column d-flex justify-content-around">
+            <li>
+              <a href="#" class="footer-text footer-link">Portfolio</a>
+            </li>
+            <li>
+              <a href="#" class="footer-text footer-link">About</a>
+            </li>
+            <li>
+              <a href="#" class="footer-text footer-link">Our Blog</a>
+            </li>
+            <li>
+              <a href="#" class="footer-text footer-link">Our Team</a>
+            </li>
+            <li>
+              <a href="#" class="footer-text footer-link">Contact</a>
+            </li>
+          </ul>
+        </div>
+        <div class="col-lg-2">
+          <h5>Company</h5>
+          <ul class="flex-lg-column d-flex justify-content-around">
+            <li>
+              <a href="#" class="footer-text footer-link">Portfolio</a>
+            </li>
+            <li>
+              <a href="#" class="footer-text footer-link">About</a>
+            </li>
+            <li>
+              <a href="#" class="footer-text footer-link">Our Blog</a>
+            </li>
+            <li>
+              <a href="#" class="footer-text footer-link">Our Team</a>
+            </li>
+            <li>
+              <a href="#" class="footer-text footer-link">Contact</a>
+            </li>
+          </ul>
+        </div>
+        <div class="col-lg-3">
+          <h5>Say Hello</h5>
+          <ul class="flex-lg-column d-flex justify-content-around">
+            <li class="footer-text">
+              Email:
+              <span
+                ><a href="#" class="footer-text footer-link"
+                  >admin@example.com</a
+                ></span
+              >
+            </li>
+            <li class="footer-text">
+              Email:
+              <span
+                ><a href="#" class="footer-text footer-link"
+                  >hr@gmail.com</a
+                ></span
+              >
+            </li>
+            <li class="footer-text">
+              Phone:
+              <span
+                ><a href="#" class="footer-text footer-link"
+                  >0971719023</a
+                ></span
+              >
+            </li>
+          </ul>
+
+          <ul class="footer__social d-flex justify-content-around">
+            <li><i class="fab fa-facebook"></i></li>
+            <li><i class="fab fa-linkedin"></i></li>
+            <li><i class="fab fa-twitter"></i></li>
+            <li><i class="fab fa-instagram"></i></li>
+          </ul>
+        </div>
+      </div>
+    </footer>
+
     <div class="progress-wrap">
       <svg
         class="progress-circle svg-content"
@@ -797,7 +896,7 @@
       integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
       crossorigin="anonymous"
     ></script>
-    
+
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"
       integrity="sha512-qzrZqY/kMVCEYeu/gCm8U2800Wz++LTGK4pitW/iswpCbjwxhsmUwleL1YXaHImptCHG0vJwU7Ly7ROw3ZQoww=="
