--- a/task-9-Masterwork/index.html
+++ b/task-9-Masterwork/index.html
@@ -20,7 +20,7 @@
   <body>
     <header class="container-fluid p-0 header fixed-top">
       <nav class="navbar navbar-expand-lg navbar-light bg-white stroke">
-        <div class="container-fluid px-5 px-sm-3">
+        <div class="container-fluid px-lg-5 px-sm-3">
           <a class="navbar-brand" href="#">
             <i class="fa-solid fa-handshake"></i> Masterwork</a
           >
@@ -54,7 +54,7 @@
               </li>
               <li class="nav-item dropdown">
                 <a
-                  class="nav-link dropdown-toggle"
+                  class="nav-link dropdown-toggle text-center"
                   href="#"
                   id="navbarDropdownMenuLink"
                   role="button"
@@ -64,13 +64,17 @@
                   Pages
                 </a>
                 <ul
-                  class="dropdown-menu"
+                  class="dropdown-menu p-1 text-start"
                   aria-labelledby="navbarDropdownMenuLink"
                 >
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
                   <li>
-                    <a class="dropdown-item" href="#">Something else here</a>
+                    <a class="dropdown-item nav-link" href="#">Blog posts</a>
+                  </li>
+                  <li>
+                    <a class="dropdown-item nav-link" href="#">Blog single</a>
+                  </li>
+                  <li>
+                    <a class="dropdown-item nav-link" href="#">Landing page</a>
                   </li>
                 </ul>
               </li>
@@ -87,7 +91,7 @@
     </header>
 
     <!-- ABOUT -->
-    <section class="about container-fluid px-5">
+    <section class="about container-fluid px-lg-5 px-sm-2 px-2">
       <div class="row pt-5">
         <div
           class="col-lg-6 d-flex align-items-start flex-column justify-content-center text-start"
@@ -121,9 +125,9 @@
           sodales quis. Integer sit amet mattis quam.
         </p>
       </div>
-      <div class="business__content container-fluid px-5 mt-4">
-        <div class="row">
-          <div class="business__card col-lg text-center col-sm-12">
+      <div class="business__content container-fluid px-lg-5 mt-4 px-sm-2">
+        <div class="row justify-content-center align-items-center">
+          <div class="business__card col-lg text-center col-sm-11">
             <div class="business__image">
               <img src="./images/s1.png" alt="business 1" />
             </div>
@@ -133,7 +137,7 @@
               Laudantium tempora rerum perspiciatis?
             </p>
           </div>
-          <div class="business__card col-lg text-center col-sm-12">
+          <div class="business__card col-lg text-center col-sm-11">
             <div class="business__image">
               <img src="./images/s2.png" alt="business 1" />
             </div>
@@ -143,7 +147,7 @@
               Laudantium tempora rerum perspiciatis?
             </p>
           </div>
-          <div class="business__card col-lg text-center col-sm-12">
+          <div class="business__card col-lg text-center col-sm-11">
             <div class="business__image">
               <img src="./images/s3.png" alt="business 1" />
             </div>
@@ -159,7 +163,7 @@
 
     <!-- INTRO -->
 
-    <section class="intro container-fluid px-5 py-4">
+    <section class="intro container-fluid px-lg-5 py-4 px-sm-2">
       <div class="row d-flex justify-content-center align-items-center">
         <div class="col-lg-6 text-start">
           <h4 class="sub-title">About Our Company</h4>
@@ -184,7 +188,7 @@
         </div>
       </div>
 
-      <div class="row mt-3">
+      <div class="row mt-3 justify-content-center px-sm-2">
         <div class="intro__card col-lg">
           <h6>Happy Customers</h6>
           <h5 class="counter">10458</h5>
@@ -213,7 +217,7 @@
     </section>
 
     <!-- STATS -->
-    <section class="stats container-fluid px-5">
+    <section class="stats container-fluid px-lg-5 px-sm-2">
       <div class="row">
         <div class="col-lg-5">
           <h4 class="mb-2">
@@ -241,8 +245,8 @@
           sodales quis. Integer sit amet mattis quam.
         </p>
       </div>
-      <div class="container-fluid px-5">
-        <div class="row">
+      <div class="container-fluid px-lg-5 px-sm-2">
+        <div class="row justify-content-center">
           <div class="card col-lg solution__card">
             <img
               src="./images/b1.jpg"
@@ -327,7 +331,7 @@
           sodales quis. Integer sit amet mattis quam.
         </p>
       </div>
-      <div class="container-fluid px-5 px-sm-3">
+      <div class="container-fluid px-lg-5 px-sm-3 px-sm-2">
         <div class="row justify-content-center">
           <div class="col-lg-5 col-sm-12 mb-3">
             <img
@@ -663,10 +667,13 @@
           sodales quis. Integer sit amet mattis quam.
         </p>
       </div>
-      <!-- data-bs-ride="carousel" -->
 
-      <div class="col-lg-12 mx-lg-auto mx-sm-2 px-4">
-        <div id="carouselExampleIndicators" class="carousel slide">
+      <div class="col-lg-12 mx-lg-auto mx-sm-2 px-3 px-sm-2">
+        <div
+          id="carouselExampleIndicators"
+          class="carousel slide"
+          data-bs-ride="carousel"
+        >
           <div class="carousel-indicators">
             <button
               type="button"
@@ -876,8 +883,8 @@
       </div>
     </section>
 
-    <footer class="footer container-fluidpy-4 py-4">
-      <div class="row footer__link px-4 mb-2">
+    <footer class="footer container-fluid py-4 py-4">
+      <div class="row footer__link px-4 mb-2 px-sm-2">
         <div class="col-lg-2">
           <h5>Company</h5>
           <ul>
@@ -920,7 +927,7 @@
                 placeholder="Email Address"
                 required=""
               />
-              <a class="secondary-btn" type="submit">Go</a>
+              <button class="secondary-btn" type="submit">Go</button>
             </form>
             <p>
               Sign up for our latest news &amp; articles. We won't give you spam
@@ -929,8 +936,8 @@
           </div>
         </div>
       </div>
-      <div class="footer__copyright container-fluid px-4 pt-2">
-        <div class="row">
+      <div class="footer__copyright container-fluid px-4 pt-2 px-sm-2">
+        <div class="row text-center align-items-center">
           <div class="col-lg-6">
             <p>
               &copy; 2022 Masterwork. All rights reserved | Designed by
@@ -938,35 +945,23 @@
             </p>
           </div>
           <div class="mt-lg-0 mt-3 col-lg-6">
-            <ul class="social d-flex justify-content-end">
+            <ul
+              class="social d-flex justify-content-lg-end justify-content-sm-between"
+            >
               <li>
-                <a href="#facebook"
-                  ><span
-                    class="fa fa-facebook"
-                    style="font-size: 2rem"
-                    aria-hidden="true"
-                  ></span
-                ></a>
+                <a href="#facebook"><i class="fa-brands fa-facebook"></i></a>
               </li>
               <li>
-                <a href="#linkedin"
-                  ><span class="fa fa-linkedin" aria-hidden="true"></span
-                ></a>
+                <a href="#linkedin"><i class="fa-brands fa-linkedin"></i></a>
               </li>
               <li>
-                <a href="#twitter"
-                  ><span class="fa fa-twitter" aria-hidden="true"></span
-                ></a>
+                <a href="#twitter"><i class="fa-brands fa-twitter"></i></a>
               </li>
               <li>
-                <a href="#google"
-                  ><span class="fa fa-google-plus" aria-hidden="true"></span
-                ></a>
+                <a href="#google"><i class="fa-brands fa-google"></i></a>
               </li>
               <li>
-                <a href="#github"
-                  ><span class="fa fa-github" aria-hidden="true"></span
-                ></a>
+                <a href="#github"><i class="fa-brands fa-github"></i></a>
               </li>
             </ul>
           </div>
