--- a/task-11-cyberphone/index.html
+++ b/task-11-cyberphone/index.html
@@ -22,10 +22,10 @@
 
     <link rel="stylesheet" href="./css/style.css" />
 
-    <title>Cyber Phone</title>
+    <title>CyberPhone</title>
   </head>
   <body>
-    <header class="px-1">
+    <header class="px-lg-5 py-lg-1 px-md-1 px-0">
       <nav class="navbar navbar-expand-lg bg-light container">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">CyberPhone</a>
@@ -64,13 +64,45 @@
       </nav>
     </header>
 
-    <section class="carousel">
+    <section class="carousel px-lg-5">
       <div class="container">
         <div class="row">
-          <div class="col-md-6 col-12">asd</div>
-          <div class="col-6">asd</div>
+          <div
+            class="col-12 col-md-6 d-flex flex-column align-items-center justify-content-center"
+          >
+            <div>
+              <h1>CyberPhone</h1>
+              <h3>Best Smartphone of 2021!</h3>
+              <p>
+                Cras tortor mi, lobortis quis ornare in, varius scelerisque
+                urna. Vivamus imperdiet dolor nec odio convallis consequat.
+              </p>
+            </div>
+
+            <div class="align-self-start">
+              <button class="btnPhone-white me-2">
+                <i class="fa fa-info-circle"></i> More Info
+              </button>
+              <button class="btnPhone-blue">
+                <i class="fa fa-shopping-cart"></i> Shop
+              </button>
+            </div>
+          </div>
+          <div class="col-6 d-md-block d-none">
+            <img
+              class="img-fluid"
+              src="./images/product-header2.png"
+              alt="phone product"
+            />
+          </div>
         </div>
       </div>
     </section>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
